--- a/AboutUs.html
+++ b/AboutUs.html
@@ -73,7 +73,7 @@
                             <span>Nguyễn Trung Hậu</span>    
                         </div>
                         <div class="col-lg-4 col-sm-12 col-md-4">
-                            <a href="https://www.facebook.com"><img src="/images/hong-anh.jpg" alt=""></a>
+                            <a href="https://www.facebook.com"><img src="/images/honganh.jpg" alt=""></a>
                             <span>Nguyễn Phùng Hồng Anh</span>    
                         </div>
                     </div>
